2008-01-23  Ian Beckwith  <ianb@erislabs.net>

	* Update gnulib to 20080123 commit 16c6ed60fb
	  (including MacOS putenv fix)
	* gitfm/gitps/gitview/gitwhich: add program_name global for lib/error.c

2008-01-22  Ian Beckwith  <ianb@erislabs.net>

	* Release gnuit 4.9.2

2008-01-21  Ian Beckwith  <ianb@erislabs.net>

	* Rewrite panel_beautify_number to use human_readable() from gnulib.
	* Call panel_beautify_number in more places.

2008-01-03  Ian Beckwith  <ianb@erislabs.net>

	* gitps.c: add horizontal scroll (ESC-g & ESC-J).

2007-11-28  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* git.c: Fallback to PAGER if GIT_PAGER is not set.
	* improve mail checking:
	  + title.c: read and parse $MAIL, then reset access time.
	  + import utime from gnulib.
	* src/Makefile.am: if --enable-debian is set. set *_LDFLAGS
	  to "-Wl,-z,defs -Wl,--as-needed". I gather this is not yet
	  portable enough for general use. While I could test for it in
	  configure, it is hard to test it works *and* is bug free.
	* gitaction: run info on *.info.{gz,bz2}.

2007-11-15  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* gitps.c: handle cygwin ps output, add more error checking.
	* README: Document the need to set CYGWIN=tty under cygwin.

2007-10-22  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Relicensed code to GPL version 3,
	  git.texinfo to GFDL 1.2 with no invariant sections,
	  no front cover texts and no back cover texts.
	* Updated to latest gnulib, also import nanosleep.

2007-10-20  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Bumped version to 4.9.2
	* gitps.c,term/gnuitrc.*.in: added RefreshAfterKill variable
	  (Default: ON), to autorefresh after signalling a process.
	* gitps.c: remove bogus code from kill_process().
	* */ChangeLog: added note to look here instead.
	* Renamed texinfo, info, html and spec files to gnuit.
	* Removed unused file 'version'

2007-10-19  Ian Beckwith  <ianb@nessie.mcc.ac.uk>

	* Renamed package to gnuit.
	* Renamed term/gitrc.* to gnuitrc.*
