@@ -11,6 +11,78 @@ Copyright: © 1993-2001, 2006-2008 Free Software Foundation, Inc.
 License: GFDL-1.2+
  No Invariant Sections, no Front-Cover Texts, no Back-Cover Texts
 
+Files: doc/texinfo.tex
+Copyright: © 1985, 1986, 1988, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005 Free Software Foundation, Inc.
+License: GPL-2+ | other
+ As a special exception, when this file is read by TeX when processing
+ a Texinfo source document, you may use the result without restriction.
+
+Files: lib/alloca.c, lib/memmove.c, src/gitmkdirs
+License: PD
+
+Files: m4/*, aclocal.m4
+Copyright: © 1997-2007 Free Software Foundation, Inc.
+License: other
+ This file is free software; the Free Software Foundation
+ gives unlimited permission to copy and/or distribute it,
+ with or without modifications, as long as this notice is preserved.
+
+Files: m4/gnulib-cache.m4, m4/gnulib-comp.m4, m4/onceonly_2_57.m4
+Copyright: © 2002-2007 Free Software Foundation, Inc.
+License: GPL-any | other
+ This file is free software, distributed under the terms of the GNU
+ General Public License.  As a special exception to the GNU General
+ Public License, this file may be distributed as part of a program
+ that contains a configuration script generated by Autoconf, under
+ the same distribution terms as the rest of that program.
+
+Files: compile, config.guess, config.sub, missing
+Copyright: © 1992-2006  Free Software Foundation, Inc.
+License: GPL-2+ | other
+ As a special exception to the GNU General Public License, if you
+ distribute this file as part of a program that contains a
+ configuration script generated by Autoconf, you may include it under
+ the same distribution terms that you use for the rest of that program.
+
+Files: INSTALL
+Copyright: © 1994, 1995, 1996, 1999, 2000, 2001, 2002, 2004, 2005 Free Software Foundation, Inc.
+License: other
+ This file is free documentation; the Free Software Foundation gives
+ unlimited permission to copy, distribute and modify it.
+
+Files: install-sh
+Copyright: © 1994 X Consortium
+License: other
+ Permission is hereby granted, free of charge, to any person obtaining a copy
+ of this software and associated documentation files (the "Software"), to
+ deal in the Software without restriction, including without limitation the
+ rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+ sell copies of the Software, and to permit persons to whom the Software is
+ furnished to do so, subject to the following conditions:
+ The above copyright notice and this permission notice shall be included in
+ all copies or substantial portions of the Software.
+ .
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE
+ X CONSORTIUM BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN
+ AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNEC-
+ TION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+ .
+ Except as contained in this notice, the name of the X Consortium shall not
+ be used in advertising or otherwise to promote the sale, use or other deal-
+ ings in this Software without prior written authorization from the X Consor-
+ tium.
+ .
+ FSF changes to this file are in the public domain.
+
+Files: Makefile.in, */Makefile.in
+Copyright: © 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005  Free Software Foundation, Inc.
+License: other
+ This Makefile.in is free software; the Free Software Foundation
+ gives unlimited permission to copy and/or distribute it,
+ with or without modifications, as long as this notice is preserved.
+
 Files: debian/*
 Copyright: © 2004-2008 Ian Beckwith <ianb@erislabs.net>
            © 1997-2001 Martin Mitchell <martin@debian.org>
