@@ -1,6 +1,6 @@
 .\" +----------
 .\" |
-.\" |			       GNUITKEYS man page
+.\" |			       GITKEYS man page
 .\" |
 .\" |	       Copyright 1993-1999, 2006-2007 Free Software Foundation, Inc.
 .\" |
