@@ -1,6 +1,6 @@
 .\" +----------
 .\" |
-.\" |			       GNUITMOUNT man page
+.\" |			       GITMOUNT man page
 .\" |
 .\" |	      Copyright 1993-1999, 2006-2007 Free Software Foundation, Inc.
 .\" |
