@@ -1,6 +1,6 @@
 .\" +----------
 .\" |
-.\" |			       GoITUNPACK man page
+.\" |			       GITUNPACK man page
 .\" |
 .\" |	       Copyright 1993-1999, 2006-2007 Free Software Foundation, Inc.
 .\" |
