@@ -1,4 +1,28 @@
 #!/bin/sh
+###############################################################################
+###									    ###
+###	        GNU Interactive Tools dpkg helper			    ###
+###     Copyright (c) 2007 Free Software Foundation, Inc.		    ###
+###                                                                         ###
+###                  This file is part of gnuit.                            ###
+###                                                                         ###
+###  gnuit is free software: you can redistribute it and/or modify it       ###
+###  under the terms of the GNU General Public License as published         ###
+###  by the Free Software Foundation, either version 3 of the               ###
+###  License, or (at your option) any later version.                        ###
+###                                                                         ###
+###  gnuit is distributed in the hope that it will be useful, but           ###
+###  WITHOUT ANY WARRANTY; without even the implied warranty of             ###
+###  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the          ###
+###  GNU General Public License for more details.                           ###
+###                                                                         ###
+###  You should have received a copy of the GNU General Public              ###
+###  License along with this program. If not, see                           ###
+###  http://www.gnu.org/licenses/.                                          ###
+###									    ###
+###              Written by Ian Beckwith <ianb@erislabs.net>		    ###
+###									    ###
+###############################################################################
 
 if [ $# -lt 1 ]
 then
