@@ -1,5 +1,23 @@
 /* history.h -- The names of functions that you can call in history.  */
 
+/* Copyright (C) 1989, 1992 Free Software Foundation, Inc.
+
+ This file is part of gnuit.
+
+ gnuit is free software: you can redistribute it and/or modify it
+ under the terms of the GNU General Public License as published
+ by the Free Software Foundation, either version 3 of the
+ License, or (at your option) any later version.
+
+ gnuit is distributed in the hope that it will be useful, but
+ WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+
+ You should have received a copy of the GNU General Public
+ License along with this program. If not, see
+ http://www.gnu.org/licenses/. */
+
 
 /* The structure used to store a history entry. */
 typedef struct {
